# moving_parts

./: LICENSE  README.md  pyproject.toml
movingparts/: bearings.py  sliders.py  springs.py
